--- a/package.json
+++ b/package.json
@@ -1,14 +1,1 @@
-{
-  "name": "Test",
-  "description": "Test",
-  "version": "0.0.0",
-  "main": "bot.js",
-  "scripts": {
-    "start": "node bot.js"
-  },
-  "dependencies": {
-    "discord.js": "11.1.0",
-    "request": "2.81.0",
-    "sqlite": "3.0.0"
-  }
-}
+npm i discord.js
